opção de escolher a pasta através explorador de arquivos Opção de deixar em tela cheia corrigida Tela de "sobre"

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,19 +54,19 @@
     </header>
     <main class="flex h-full text-white" id="content">
         <aside class="sidebar" id="sidebar">
-            <button class="sidebar-button sidebar-active">
-                <p class="flex items-center text-lg" id="home-btn"><span class="material-icons mr-4">play_circle</span>
+            <button class="sidebar-button sidebar-active" id="home-btn">
+                <p class="flex items-center text-lg"><span class="material-icons mr-4">play_circle</span>
                     Jogar</p>
             </button>
-            <button class="sidebar-button">
-                <p class="flex items-center text-lg" id="config-btn"><span class="material-icons mr-4">apps</span>
+            <button class="sidebar-button" id="config-btn">
+                <p class="flex items-center text-lg" ><span class="material-icons mr-4">apps</span>
                     Configurações</p>
             </button>
-            <button class="sidebar-button">
-                <p class="flex items-center text-lg" id="accounts-btn"><span
+            <button class="sidebar-button" id="accounts-btn">
+                <p class="flex items-center text-lg" ><span
                         class="material-icons mr-4">account_circle</span> Contas</p>
             </button>
-            <button class="sidebar-button">
+            <button class="sidebar-button" id="about-btn">
                 <p class="flex items-center text-lg"><span class="material-icons mr-4">flag_circle</span> Sobre</p>
             </button>
             <div class="mt-auto flex items-center">
@@ -77,7 +77,5 @@
             </div>
         </aside>
     </main>
-    <span class="hidden"></span>
 </body>
-
 </html>
