Botao de abrir terminal

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </header>
-    <main class="flex h-full text-white" id="content">
+    <main class="flex h-full text-white overflow-hidden" id="content">
         <aside class="sidebar" id="sidebar">
             <button class="sidebar-button sidebar-active" id="home-btn">
                 <p class="flex items-center text-lg"><span class="material-icons mr-4">play_circle</span>
